# today-i-learned

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
api/: Dockerfile  pyproject.toml
api/app/: config.py  main.py
api/app/models/: __init__.py  digest.py  note.py
api/app/routers/: digest.py  notes.py
api/app/services/: cognee_service.py  llm_service.py
api/tests/: test_cognee_service.py  test_digest_router.py  test_llm_service.py  test_models.py  test_notes_router.py
docs/: CONTRIBUTING.md  RUNBOOK.md
docs/plans/: 2026-02-04-zettl-implementation.md  2026-02-04-zettl-knowledge-graph-design.md  2026-02-05-mcp-server-design.md  2026-02-18-digest-caching-design.md  2026-02-18-digest-caching-plan.md
mcp-server/: README.md  TODO.md  pyproject.toml
mcp-server/src/zettl_mcp/: __init__.py  __main__.py  client.py
mcp-server/tests/: conftest.py  test_client.py
ui/: README.md  package.json
ui/app/: globals.css  layout.tsx
ui/components/: capture-form.tsx  digest-panel.tsx  note-card.tsx  search-form.tsx  theme-switcher.tsx
zettl/: .env.example  Makefile  docker-compose.yml  test_cognee.py
zettl/api/: pyproject.toml
zettl/api/app/: config.py  main.py
zettl/api/app/models/: content.py  note.py
zettl/api/app/routers/: __init__.py  digest.py  notes.py  stats.py
zettl/api/app/services/: __init__.py  cognee_service.py  digest_cache_service.py  llm_service.py  search_cache_service.py  stats_service.py
zettl/api/app/services/content_agent/: __init__.py  graph.py  state.py  tools.py
zettl/api/app/services/content_agent/skills/: write-blog-post.md  write-linkedin-post.md  write-video-script.md  write-x-thread.md
zettl/api/tests/: test_activity_endpoint.py  test_activity_service.py  test_content_agent_graph.py  test_content_agent_service.py  test_content_agent_state.py  test_content_agent_tools.py  test_digest_cache_service.py  test_digest_router.py  test_graph_endpoint.py  test_llm_service.py  test_notes_router.py  test_search_cache_service.py
(+31 files in other folders)
