[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zettl-mcp"
version = "0.1.0"
description = "MCP server for Zettl knowledge management API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "inline-snapshot>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zettl_mcp"]
